# risu-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_JP.md
.github/workflows/: ci.yml
docs/legal/: privacy_policy.md  terms_of_service.md
src/: config.rs  crypto.rs  db.rs  logger.rs  main.rs  markdown.rs  sync.rs
