[package]
name = "risu"
version = "0.1.13"
edition = "2021"
description = "A lightning-fast, TUI-based note-taking app written in Rust. Features Vim-like bindings, local-first storage, and E2E encrypted sync."
license = "MIT"
repository = "https://github.com/ticklon/risu-cli"
keywords = ["tui", "cli", "markdown", "notes", "productivity"]
categories = ["command-line-utilities", "text-editors"]
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6.0.0"
futures-util = "0.3.31"
ratatui = { version = "0.29.0", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tui-textarea = "0.7.0"
uuid = { version = "1.19.0", features = ["v4"] }
webbrowser = "1.0.6"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
rand = "0.9.2"
zeroize = "1.8.2"
clap = { version = "4.5.54", features = ["derive"] }
